# genesis

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  alembic.ini  check_coverage.py  check_final_coverage.py  coverage.json  docker-compose.jaeger-prod.yml  docker-compose.jaeger.yml  docker-compose.load-test.yml  docker-compose.vault.yml  docker-compose.yml  final_coverage_report.py  pyproject.toml  pytest-hunter.ini  requirements.txt  setup.cfg  test_paper_trading_coverage.py  verify_password_security.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/: dependabot.yml
.github/workflows/: automated_testing.yml  cd.yml  ci.yml  container-security.yml  dependency-update.yml  deploy.yml  performance-test.yml  performance.yml  performance_regression.yml  security-scan.yml  test.yml  validation.yml
alembic/: env.py
alembic/versions/: 001_initial_migration_with_core_trading.py  002_add_correlation_view.py  003_sqlite_to_postgres.py  004_add_2fa_tables.py  004_add_behavioral_analytics_tables.py  004_password_security_migration.py  005_add_tier_transition_tables.py  005_complete_postgres_migration.py  006_add_iceberg_order_tables.py  007_add_multi_pair_trading_tables.py  008_add_twap_execution_tables.py  009_add_tier_transition_tables.py  010_add_smart_routing_fields.py  011_add_tax_lot_tracking_table.py
config/: __init__.py  backup_config.py  curator-actions.yml  curator-config.yml  elasticsearch.yml  emergency_thresholds.yaml  jaeger-tls.yml  jaeger-ui-config.json  pgbouncer.ini  pgbouncer_userlist.txt  recovery_messages.yaml  settings.py  slo_definitions.yaml  strategy_allocation.yaml  tier_gates.yaml  trading_rules.yaml  validation_pipeline.yaml
config/grafana/: comprehensive_dashboard.json  dashboard.json
config/strategies/: hunter_mean_reversion.yaml  sniper_arbitrage.yaml  strategist_vwap.yaml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  supervisord.conf
docker/elk/: logstash.conf
docker/prometheus/: prometheus.yml
docs/: CONTAINERIZATION_COMPLETE.md  PAPER_TRADING.md  STORY_89_IMPLEMENTATION_REPORT.md  STORY_8_10_1_COMPLETE.md  architecture.md  brainstorming-session-results.md  brief.md  configuration-schema.md  definition-of-done.md  performance-tuning-guide.md  prd.md  tracing-best-practices.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-guide.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md  trading-loop-sequence-diagrams.md
docs/checklists/: compliance-checklist.md  operations-training.md
docs/compliance/: data_retention_policy.md  gdpr_compliance.md  kyc_aml_procedures.md  soc2_readiness.md
docs/deployment/: docker.md
docs/disaster-recovery/: backup-procedures.md  dr-runbook.md  dr-testing.md  emergency-close.md  failover-procedures.md  monitoring.md  recovery-guide.md  replication.md
docs/monitoring/: elk-setup.md  grafana-dashboards.md  prometheus-setup.md
docs/operations/: README.md  disaster_recovery.md
docs/prd/: checklist-results-report.md  epic-0-trading-foundation.md  epic-1-foundation-sniper-tier-core-0-500-capability.md  epic-10-core-trading-brain-implementation.md  epic-2-data-pipeline-market-intelligence-500-1k-capability.md  epic-3-psychological-safeguards-tilt-detection-1k-2k-capability.md  epic-4-hunter-tier-evolution-execution-algorithms-2k-5k-capability.md  epic-5-advanced-risk-management-portfolio-control-5k-10k-capability.md  epic-6-strategist-tier-performance-analytics-10k-capability.md  epic-7-production-deployment-operational-excellence.md  epic-8-final-production-hardening-validation.md  epic-9-critical-security-infrastructure.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/runbooks/: database-optimization.md  error-handling-runbook.md  incident-response.md  performance-troubleshooting.md
docs/security/: ci-security.md  encryption.md  network-segmentation.md  permissions.md  scanning.md  tls-configuration.md  vault-setup.md
docs/setup/: dependencies.md  python_environment.md
docs/stories/: 0.1.story.md  0.2.story.md  0.3.story.md  0.4.story.md  0.5.story.md  1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md  10.1.1.story.md  10.1.2.story.md  10.1.3.story.md  10.1.story.md  10.10.1.story.md  10.10.2.story.md  10.2.1.story.md  10.2.2.story.md  10.2.story.md  10.3.1.story.md  10.3.2.story.md  10.5.story.md  (+84 more)
genesis/: __main__.py  cli.py
k8s/: deployment.yaml
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  pvc.yaml  secret.yaml  service.yaml
monitoring/: alertmanager.yml
requirements/: base.txt  dev.txt  hunter.txt  sniper.txt  strategist.txt
scripts/: activate_env.ps1  activate_env.sh  backup.sh  build_container.sh  check_genesis_secrets.py  check_performance_regression.py  deploy.sh  emergency_close.py  generate_audit_report.py  generate_jaeger_certs.sh  go_live_dashboard.py  maintenance.py  migrate_passwords.py  migrate_secrets_to_vault.py  migrate_to_poetry.py  migrate_to_postgres.py  production_readiness.py  push_container.sh  rollback.sh  rotate_keys.py  run_load_tests.py  setup_dev.sh  smoke_tests.py  update_requirements.py  validate_dr_implementation.py  validate_production.py  validate_tiers.py  validation_pipeline.py  verify_hashes.py
terraform/: main.tf
tests/: README.md  __init__.py  conftest.py  story_88_verification_report.json  test_exchange_integration.py  test_market_analyzer_verification.py  test_story_89_dashboard.py  verify_story_88_complete.py  verify_story_89.py  verify_story_89_complete.py  verify_story_8_10_2_complete.py  verify_validation_framework.py
(+961 files in other folders)
